<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    tools:context="rhit.jrProj.henry.MilestoneCreateFragment" >

        <EditText
            android:id="@+id/TaskDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/TaskDescriptionHint"
            android:inputType="textMultiLine"
            android:shadowColor="@color/black"
            android:singleLine="false" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/taskNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/TaskNameHint" />

        <Button
            android:id="@+id/TaskCancelButton"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TaskDescriptionField"
            android:layout_below="@+id/TaskDescriptionField"
            android:layout_marginTop="33dp"
            android:text="@string/MilestoneCreateCancelString" />

        <Button
            android:id="@+id/TaskAddButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TaskCancelButton"
            android:layout_alignBottom="@+id/TaskCancelButton"
            android:layout_toRightOf="@+id/TaskCancelButton"
            android:text="@string/MilestoneAddString" />

</RelativeLayout>